Refactoring to use cloud_provider to install awscli role

--- a/playbooks/playbook-install-tools.yml
+++ b/playbooks/playbook-install-tools.yml
@@ -24,6 +24,6 @@
     - kubectl
     - helm
     - role: awscli
-      when: install_awscli | default(False) | bool
+      when: cloud_provider is defined and cloud_provider == "aws"
   tags:
     - tools
