--- a/charts/stable/scalardl/values.yaml
+++ b/charts/stable/scalardl/values.yaml
@@ -30,9 +30,9 @@ envoy:
   strategy:
     rollingUpdate:
       # envoy.strategy.rollingUpdate -- The number of pods that can be created above the desired amount of pods during an update
-      maxSurge: 0
+      maxSurge: 100%
       # envoy.strategy.rollingUpdate -- The number of pods that can be unavailable during the update process
-      maxUnavailable: 1
+      maxUnavailable: 0
     # envoy.strategy.type -- New pods are added gradually, and old pods are terminated gradually, e.g: Recreate or RollingUpdate
     type: RollingUpdate
 
@@ -134,9 +134,9 @@ ledger:
   strategy:
     rollingUpdate:
       # ledger.strategy.rollingUpdate -- The number of pods that can be created above the desired amount of pods during an update
-      maxSurge: 0
+      maxSurge: 100%
       # ledger.strategy.rollingUpdate -- The number of pods that can be unavailable during the update process
-      maxUnavailable: 1
+      maxUnavailable: 0
     # ledger.strategy.type -- New pods are added gradually, and old pods are terminated gradually, e.g: Recreate or RollingUpdate
     type: RollingUpdate
 
