--- a/charts/stable/scalardl/templates/envoy/deployment.yaml
+++ b/charts/stable/scalardl/templates/envoy/deployment.yaml
@@ -46,6 +46,7 @@ spec:
               path: /ready
               port: 9001
             failureThreshold: 3
+            initialDelaySeconds: 0
             periodSeconds: 10
             successThreshold: 1
             timeoutSeconds: 1
