--- a/charts/stable/scalardl/templates/ledger/deployment.yaml
+++ b/charts/stable/scalardl/templates/ledger/deployment.yaml
@@ -69,6 +69,7 @@ spec:
               - /bin/grpc_health_probe
               - -addr=:50051
             failureThreshold: 3
+            initialDelaySeconds: 0
             periodSeconds: 10
             successThreshold: 1
             timeoutSeconds: 1
