--- a/playbooks/roles/scalardl/defaults/main.yml
+++ b/playbooks/roles/scalardl/defaults/main.yml
@@ -11,3 +11,6 @@ kubernetes_namespace: default
 deploy_scalardl: yes
 scalardl_helm_release_name: prod
 deploy_scalar_load_schma: yes
+
+scalardl_chart_repo: https://github.com/tei-k/scalar-charts.git
+scalardl_chart_version: main
