--- a/charts/stable/scalardl/templates/ledger/deployment.yaml
+++ b/charts/stable/scalardl/templates/ledger/deployment.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     {{- include "scalardl-ledger.labels" . | nindent 4 }}
 spec:
-  minReadySeconds: 120
+  minReadySeconds: 0
   replicas: {{ .Values.ledger.replicaCount }}
   selector:
     matchLabels:
@@ -69,11 +69,11 @@ spec:
               command:
               - /bin/grpc_health_probe
               - -addr=:50051
-          readinessProbe:
-            exec:
-              command:
-              - /bin/grpc_health_probe
-              - -addr=:50051
+            failureThreshold: 3
+            initialDelaySeconds: 10
+            periodSeconds: 10
+            successThreshold: 1
+            timeoutSeconds: 1
           resources:
             {{- toYaml .Values.ledger.resources | nindent 12 }}
       {{- with .Values.ledger.nodeSelector }}
