--- a/playbooks/roles/scalardl/defaults/main.yml
+++ b/playbooks/roles/scalardl/defaults/main.yml
@@ -10,5 +10,5 @@ kubernetes_namespace: default
 deploy_scalardl: yes
 scalardl_helm_release_name: prod
 deploy_scalar_load_schma: yes
-helm_charts_repo: https://github.com/scalar-labs/charts.git
+helm_charts_repo: https://github.com/scalar-labs/helm-charts.git
 helm_charts_version: main
