--- a/playbooks/roles/prometheus/defaults/main.yml
+++ b/playbooks/roles/prometheus/defaults/main.yml
@@ -2,11 +2,12 @@
 namespace: monitoring
 prometheus_version: 8.14.0
 remote_directory: "/home/{{ ansible_user }}"
+crds_path: "{{ remote_directory }}/helm/prometheus-crds/"
 helm_binary_path: /usr/local/bin/helm
 deploy_prometheus: yes
 create_dashboard: yes
 alertmanager_notification_activated: false
-# slack_webhook_url: "https://hooks.slack.com/services/xxxxxxxxxxxxxxx/xxxxxxxxxxxxxxx/xxxxxxxxxxxxxxx" 
+# slack_webhook_url: "https://hooks.slack.com/services/xxxxxxxxxxxxxxx/xxxxxxxxxxxxxxx/xxxxxxxxxxxxxxx"
 prometheus_crds_url:
 - https://raw.githubusercontent.com/coreos/prometheus-operator/release-0.38/example/prometheus-operator-crd/monitoring.coreos.com_alertmanagers.yaml
 - https://raw.githubusercontent.com/coreos/prometheus-operator/release-0.38/example/prometheus-operator-crd/monitoring.coreos.com_podmonitors.yaml
