--- a/playbooks/roles/fluentbit/defaults/main.yml
+++ b/playbooks/roles/fluentbit/defaults/main.yml
@@ -3,7 +3,7 @@ monitoring_kubernetes_namespace: monitoring
 fluent_manifests_path: /home/{{ ansible_user }}/manifests/fluentbit
 fluent_monitor_host: monitor.internal.scalar-labs.com
 fluent_monitor_port: 24224
-fluent_activate_metrics: yes
+fluent_activate_metrics: true
 fluent_image: fluent/fluent-bit
 fluent_tag: 1.3.11
 fluent_manifests_files:
