Add file permission for copy

--- a/playbooks/roles/fluentbit/tasks/copy.yml
+++ b/playbooks/roles/fluentbit/tasks/copy.yml
@@ -10,4 +10,5 @@
   copy:
     src: "{{ item }}"
     dest: "{{ fluent_manifests_path }}/{{ item }}"
+    mode: 0644
   loop: "{{ fluent_manifests_files }}"
