--- a/playbooks/roles/prometheus/tasks/copy.yml
+++ b/playbooks/roles/prometheus/tasks/copy.yml
@@ -1,13 +1,12 @@
 ---
 - name: Create folder on remote server
   file:
-    path: "{{ remote_directory }}/helm/crds"
+    path: "{{ prometheus_crds_path }}"
     state: directory
     mode: 0755
 
 - name: Template file on remote server
   template:
     src: prometheus-custom-values.yaml.j2
-    dest: "{{ remote_directory }}/helm/prometheus-custom-values.yaml"
+    dest: "{{ prometheus_config_path }}/prometheus-custom-values.yaml"
     mode: 0644
-    remote_src: no
