--- a/playbooks/roles/prometheus/tasks/dashboard.yml
+++ b/playbooks/roles/prometheus/tasks/dashboard.yml
@@ -1,19 +1,18 @@
 ---
 - name: Create folder grafana on remote server
   file:
-    path: "{{ remote_directory }}/manifests/grafana"
+    path: "{{ granafa_manifests_path }}"
     state: directory
     mode: 0755
 
 - name: Copy grafana json file on remote server
   copy:
-    src: files/{{ item }}
-    dest: "{{ remote_directory }}/manifests/grafana/{{ item }}"
+    src: "{{ item }}"
+    dest: "{{ granafa_manifests_path }}/{{ item }}"
     mode: 0644
-    remote_src: no
   loop:
-  - envoy.json
-  - scalardl_monitor.json
+    - envoy.json
+    - scalardl_monitor.json
 
 - name: Check if prometheus-grafana-envoy ConfigMap exists in Kubernetes
   k8s_info:
@@ -26,7 +25,7 @@
 - name: Deploy ConfigMap prometheus-grafana-envoy in Kubernetes
   command: >-
     kubectl create configmap -n {{ namespace }} prometheus-grafana-envoy
-    --from-file {{ remote_directory }}/manifests/grafana/envoy.json
+    --from-file {{ granafa_manifests_path }}/envoy.json
   when: not prometheus_grafana_envoy_exists.resources | length > 0
 
 - name: Add Label to ConfigMap prometheus-grafana-envoy
@@ -44,7 +43,7 @@
 - name: Deploy ConfigMap pprometheus-grafana-scalardl-monitor in Kubernetes
   command: >-
     kubectl create configmap -n {{ namespace }} prometheus-grafana-scalardl-monitor
-    --from-file {{ remote_directory }}/manifests/grafana/scalardl_monitor.json
+    --from-file {{ granafa_manifests_path }}/scalardl_monitor.json
   when: not prometheus_grafana_scalardl_monitor_exists.resources | length > 0
 
 - name: Add Label to ConfigMap prometheus-grafana-scalardl-monitor
