--- a/playbooks/roles/prometheus/tasks/main.yml
+++ b/playbooks/roles/prometheus/tasks/main.yml
@@ -3,4 +3,4 @@
 - import_tasks: copy.yml
 - import_tasks: deploy.yml
 - import_tasks: dashboard.yml
-  when: create_dashboard
+  when: create_dashboard | bool
