--- a/playbooks/playbook-deploy-fluentbit.yml
+++ b/playbooks/playbook-deploy-fluentbit.yml
@@ -7,8 +7,8 @@
     fluent_monitor_host: monitor.{{ internal_domain }}
   #   default_kubernetes_namespace: logging
   #   monitoring_kubernetes_namespace: monitoring
-  #   remote_manifests_directory: "/home/{{ ansible_user }}/manifests"
+  #   fluent_manifests_path: /home/{{ ansible_user }}/manifests/fluentbit
   #   fluent_monitor_port: 24224
-  #   fluent_activate_metrics: yes
+  #   fluent_activate_metrics: true
   roles:
-  - fluentbit
+    - { role: fluentbit, tags: fluentbit }
