Separate helm charts (#116)

--- a/playbooks/roles/scalardl/defaults/main.yml
+++ b/playbooks/roles/scalardl/defaults/main.yml
@@ -1,7 +1,9 @@
-base_local_directory: ../conf
-local_helm_charts_directory: ../../../../charts/stable
-local_helm_charts_values_directory: "{{ base_local_directory }}/"
+local_helm_charts_values_directory: "{{ lookup('env','SCALAR_K8S_CONFIG_DIR') | default('../conf', True) }}"
 remote_directory: "/home/{{ ansible_user }}"
+helm_charts_custom_config_path: "{{ remote_directory }}/helm/config"
+helm_charts_clone_path: "{{ remote_directory }}/helm/helm-charts"
+helm_charts_repo_url: https://github.com/scalar-labs/helm-charts.git
+helm_charts_version: main
 docker_registry: ghcr.io
 docker_username: "{{ lookup('env','DOCKER_REGISTRY_USERNAME') }}"
 docker_password: "{{ lookup('env','DOCKER_REGISTRY_PASSWORD') }}"
