--- a/playbooks/roles/prometheus/tasks/deploy.yml
+++ b/playbooks/roles/prometheus/tasks/deploy.yml
@@ -1,34 +1,56 @@
 ---
-- name: Create namespace for Prometheus
-  k8s:
-    name: "{{ namespace }}"
-    api_version: v1
-    kind: Namespace
+- name: Install Helm Diff
+  kubernetes.core.helm_plugin:
     state: present
+    plugin_path: https://github.com/databus23/helm-diff
 
-- name: Download Custom Resource Definition
-  get_url:
-    url: "{{ prometheus_crds_url }}/{{ item }}"
-    dest: "{{ prometheus_crds_path }}"
-  loop: "{{ prometheus_crds_files }}"
+- name: Add prometheus-community chart repo
+  community.kubernetes.helm_repository:
+    name: main
+    repo_url: "{{ prometheus_charts_repo }}"
 
-- name: Deploy Prometheus CRDs
-  k8s:
-    state: present
-    src: "{{ prometheus_crds_path }}/{{ item }}"
-  loop: "{{ prometheus_crds_files }}"
+- name: Deploy prometheus with helm
+  community.kubernetes.helm:
+    name: prometheus
+    chart_ref: prometheus-community/kube-prometheus-stack
+    release_namespace: "{{ namespace }}"
+    create_namespace: true
+    wait_timeout: "200"
 
-- name: wait Prometheus CRDS install in Kubernetes cluster
-  pause:
-    seconds: "30"
 
-- name: Deploy/Upgrade prometheus with helm
-  command: >-
-    {{ helm_binary_path }} upgrade --install prometheus stable/prometheus-operator
-    --namespace {{ namespace }} --version {{ prometheus_version }}
-    -f {{ prometheus_config_path }}/prometheus-custom-values.yaml --timeout 200s
-  when: deploy_prometheus | bool
-  register: result
-  retries: 2
-  delay: 30
-  until: result is not failed
+# - name:
+#   community.kubernetes.helm:
+#     name: prometheus
+#     chart_ref: stable/prometheus
+#     release_namespace: "{{ namespace }}"
+#     create_namespace: true
+#     wait_timeout: "200s"
+#     wait: yes
+
+
+# - name: Download Custom Resource Definition
+#   get_url:
+#     url: "{{ prometheus_crds_url }}/{{ item }}"
+#     dest: "{{ prometheus_crds_path }}"
+#   loop: "{{ prometheus_crds_files }}"
+
+# - name: Deploy Prometheus CRDs
+#   k8s:
+#     state: present
+#     src: "{{ prometheus_crds_path }}/{{ item }}"
+#   loop: "{{ prometheus_crds_files }}"
+
+# - name: wait Prometheus CRDS install in Kubernetes cluster
+#   pause:
+#     seconds: "30"
+
+# - name: Deploy/Upgrade prometheus with helm
+#   command: >-
+#     {{ helm_binary_path }} upgrade --install prometheus stable/prometheus-operator
+#     --namespace {{ namespace }} --version {{ prometheus_version }}
+#     -f {{ prometheus_config_path }}/prometheus-custom-values.yaml --timeout 200s
+#   when: deploy_prometheus | bool
+#   register: result
+#   retries: 2
+#   delay: 30
+#   until: result is not failed
