--- a/playbooks/roles/prometheus/defaults/main.yml
+++ b/playbooks/roles/prometheus/defaults/main.yml
@@ -4,9 +4,20 @@ prometheus_version: 14.9.0
 prometheus_charts_repo: https://prometheus-community.github.io/helm-charts
 remote_directory: /home/{{ ansible_user }}
 prometheus_config_path: "{{ remote_directory }}/helm/prometheus"
+prometheus_crds_path: "{{ prometheus_config_path }}/crds"
 granafa_manifests_path: "{{ remote_directory }}/manifests/grafana"
 helm_binary_path: /usr/local/bin/helm
 deploy_prometheus: true
 create_dashboard: true
 alertmanager_notification_activated: false
 # slack_webhook_url: "https://hooks.slack.com/services/xxxxxxxxxxxxxxx/xxxxxxxxxxxxxxx/xxxxxxxxxxxxxxx"
+prometheus_crds_files:
+  - monitoring.coreos.com_alertmanagerconfigs.yaml
+  - monitoring.coreos.com_alertmanagers.yaml
+  - monitoring.coreos.com_podmonitors.yaml
+  - monitoring.coreos.com_probes.yaml
+  - monitoring.coreos.com_prometheuses.yaml
+  - monitoring.coreos.com_servicemonitors.yaml
+  - monitoring.coreos.com_thanosrulers.yaml
+prometheus_crds_version: v0.47.0
+prometheus_crds_url: https://raw.githubusercontent.com/prometheus-operator/prometheus-operator/{{ prometheus_crds_version }}/example/prometheus-operator-crd
