--- a/playbooks/roles/scalardl/tasks/configuration.yml
+++ b/playbooks/roles/scalardl/tasks/configuration.yml
@@ -12,3 +12,13 @@
     kubectl create secret docker-registry {{ kubernetes_registry_secret_name }} --docker-server={{ docker_registry }}
     --docker-username={{ docker_username }} --docker-password={{ docker_password }}
   when: not docker_registry_secrets.resources | length > 0
+
+- name: Install Helm Diff
+  kubernetes.core.helm_plugin:
+    state: present
+    plugin_path: https://github.com/databus23/helm-diff
+
+- name: Add scalardl charts repo
+  kubernetes.core.helm_repository:
+    name: scalardl
+    repo_url: "{{ helm_charts_repo_url }}"
