--- a/playbooks/roles/scalardl/tasks/schema.yml
+++ b/playbooks/roles/scalardl/tasks/schema.yml
@@ -24,7 +24,7 @@
     wait_timeout: "200"
     values_files:
       - "{{ helm_charts_custom_config_path }}/schema-loading-custom-values.yaml"
-  when: deploy_scalardl | bool
+  when: deploy_scalar_load_schma | bool
 
 - name: Check Schema Loading job have been successful
   k8s_info:
