--- a/playbooks/roles/helm/defaults/main.yml
+++ b/playbooks/roles/helm/defaults/main.yml
@@ -1,5 +1,7 @@
 helm_version: v3.5.2
 helm_path: /usr/local/bin/helm
-helm_url: "https://get.helm.sh/helm-{{ helm_version }}-linux-amd64.tar.gz"
-helm_url_checksum_sha256: 8eb56cbb7d0da6b73cd8884c6607982d0be8087027b8ded01d6b2759a72e34b1
-remote_home_user: "/home/{{ ansible_user }}/"
+helm_binary_path: "{{ helm_path }}-{{ helm_version }}"
+helm_archive: helm-{{ helm_version }}-linux-amd64.tar.gz
+helm_url: https://get.helm.sh/{{ helm_archive }}
+helm_url_checksum_sha256: 01b317c506f8b6ad60b11b1dc3f093276bb703281cb1ae01132752253ec706a2
+remote_home_user: /home/{{ ansible_user }}/
