Fix to use kube prometheus stack (#120)

--- a/playbooks/roles/prometheus/tasks/copy.yml
+++ b/playbooks/roles/prometheus/tasks/copy.yml
@@ -1,7 +1,7 @@
 ---
 - name: Create folder on remote server
   file:
-    path: "{{ prometheus_crds_path }}"
+    path: "{{ prometheus_config_path }}"
     state: directory
     mode: 0755
 
