Fix user for install helm plugin

--- a/playbooks/roles/helm/tasks/plugins.yml
+++ b/playbooks/roles/helm/tasks/plugins.yml
@@ -27,3 +27,4 @@
     plugin_path: "{{ item }}"
     binary_path: "{{ helm_path }}"
   loop: "{{ helm_plugins }}"
+  become_user: "{{ ansible_user }}"
