--- a/playbooks/roles/kubectl/tasks/install.yml
+++ b/playbooks/roles/kubectl/tasks/install.yml
@@ -1,11 +1,21 @@
 ---
+- name: Check the installed kubectl
+  stat:
+    path: "{{ kubectl_binary_path }}"
+  changed_when: false
+  register: kubectl_binary_result
+
 - name: Download and install binary on the admin server
   get_url:
     url: "{{ kubectl_url }}"
-    dest: "{{ kubectl_path }}"
-    checksum: "sha256:{{ kubectl_url_checksum_sha256 }}"
-
-- name: Set permissions for kubectl
-  file:
-    path: "{{ kubectl_path }}"
+    dest: "{{ kubectl_binary_path }}"
+    checksum: "sha256:{{ kubectl_checksum_sha256 }}"
     mode: 0755
+  when: not kubectl_binary_result.stat.exists
+
+- name: Create kubectl symlink
+  file:
+    src: "{{ kubectl_binary_path }}"
+    path: "{{ kubectl_path }}"
+    force: yes
+    state: link
