--- a/playbooks/roles/scalardl/tasks/schema.yml
+++ b/playbooks/roles/scalardl/tasks/schema.yml
@@ -16,8 +16,8 @@
 - name: Deploy Schema Loading with helm
   kubernetes.core.helm:
     name: load-schema
-    chart_ref: "{{ scalardl_charts_repo_name }}/schema-loading"
-    chart_version: "{{ schema_loading_charts_version }}"
+    chart_ref: "{{ helm_charts_repo_name }}/schema-loading"
+    chart_version: "{{ schema_loading_chart_version }}"
     release_namespace: "{{ kubernetes_namespace }}"
     update_repo_cache: yes
     create_namespace: yes
