--- a/playbooks/playbook-deploy-scalardl.yml
+++ b/playbooks/playbook-deploy-scalardl.yml
@@ -13,9 +13,9 @@
     # deploy_scalardl: true
     # deploy_scalar_load_schma: true
     # scalardl_helm_release_name: prod
-    # scalardl_charts_repo_url: https://scalar-labs.github.io/helm-charts
-    # scalardl_charts_repo_name: scalar-labs
-    # scalardl_charts_version: 1.2.2
-    # schema_loading_charts_version: 1.3.0
+    # helm_charts_repo_url: https://scalar-labs.github.io/helm-charts
+    # helm_charts_repo_name: scalar-labs
+    # scalardl_chart_version: 1.2.2
+    # schema_loading_chart_version: 1.3.0
   roles:
     - { role: scalardl, tags: scalardl }
