--- a/playbooks/roles/scalardl/tasks/scalardl.yml
+++ b/playbooks/roles/scalardl/tasks/scalardl.yml
@@ -2,8 +2,8 @@
 - name: Deploy Scalar DL with helm
   kubernetes.core.helm:
     name: "{{ scalardl_helm_release_name }}"
-    chart_ref: "{{ scalardl_charts_repo_name }}/scalardl"
-    chart_version: "{{ scalardl_charts_version }}"
+    chart_ref: "{{ helm_charts_repo_name }}/scalardl"
+    chart_version: "{{ scalardl_chart_version }}"
     release_namespace: "{{ kubernetes_namespace }}"
     update_repo_cache: yes
     create_namespace: yes
