--- a/playbooks/roles/scalardl/defaults/main.yml
+++ b/playbooks/roles/scalardl/defaults/main.yml
@@ -1,15 +1,16 @@
 local_helm_charts_values_directory: "{{ lookup('env','SCALAR_K8S_CONFIG_DIR') | default('../conf', True) }}"
 remote_directory: "/home/{{ ansible_user }}"
 helm_charts_custom_config_path: "{{ remote_directory }}/helm/config"
-helm_charts_clone_path: "{{ remote_directory }}/helm/helm-charts"
-helm_charts_repo_url: https://github.com/scalar-labs/helm-charts.git
-helm_charts_version: main
+helm_charts_repo_url: https://scalar-labs.github.io/helm-charts
+helm_charts_repo_name: scalar-labs
+scalardl_chart_version: 1.2.2
+schema_loading_chart_version: 1.3.0
 docker_registry: ghcr.io
 docker_username: "{{ lookup('env','DOCKER_REGISTRY_USERNAME') }}"
 docker_password: "{{ lookup('env','DOCKER_REGISTRY_PASSWORD') }}"
 kubernetes_registry_secret_name: "reg-docker-secrets"
 helm_binary_path: /usr/local/bin/helm
 kubernetes_namespace: default
-deploy_scalardl: yes
+deploy_scalardl: true
 scalardl_helm_release_name: prod
-deploy_scalar_load_schma: yes
+deploy_scalar_load_schma: true
