--- a/playbooks/roles/scalardl/tasks/scalardl.yml
+++ b/playbooks/roles/scalardl/tasks/scalardl.yml
@@ -1,7 +1,13 @@
 ---
-- name: Deploy Scalar DL
-  command: >-
-    {{ helm_binary_path }} upgrade --install {{ scalardl_helm_release_name }} {{ helm_charts_clone_path }}/charts/scalardl
-    --namespace {{ kubernetes_namespace }}
-    -f {{ helm_charts_custom_config_path }}/scalardl-custom-values.yaml
-  when: deploy_scalardl
+- name: Deploy Scalar DL with helm
+  kubernetes.core.helm:
+    name: "{{ scalardl_helm_release_name }}"
+    chart_ref: "{{ helm_charts_repo_name }}/scalardl"
+    chart_version: "{{ scalardl_chart_version }}"
+    release_namespace: "{{ kubernetes_namespace }}"
+    update_repo_cache: yes
+    create_namespace: yes
+    wait_timeout: "200"
+    values_files:
+      - "{{ helm_charts_custom_config_path }}/scalardl-custom-values.yaml"
+  when: deploy_scalardl | bool
