--- a/playbooks/roles/scalardl/tasks/schema.yml
+++ b/playbooks/roles/scalardl/tasks/schema.yml
@@ -17,7 +17,7 @@
   kubernetes.core.helm:
     name: load-schema
     chart_ref: "{{ helm_charts_repo_name }}/schema-loading"
-    chart_version: "{{ schema_loading_chart_version }}"
+    chart_version: "{{ schema_loading_chart_version | default('') }}"
     release_namespace: "{{ kubernetes_namespace }}"
     update_repo_cache: yes
     create_namespace: yes
