update/add for Auditor

--- a/conf/scalardl-audit-custom-values.yaml
+++ b/conf/scalardl-audit-custom-values.yaml
@@ -57,13 +57,13 @@ envoy:
       cpu: 300m
       memory: 328Mi
 
-ledger:
+auditor:
   replicaCount: 3
 
   imagePullSecrets:
     - name: reg-docker-secrets
 
-  scalarLedgerConfiguration:
+  scalarAuditorConfiguration:
     dbContactPoints: cassandra-lb.internal.scalar-labs.com
 
     #
@@ -82,7 +82,7 @@ ledger:
     # dbPassword: <AWS_ACCESS_SECRET_KEY>
 
     # To use Auditor
-    # ledgerAuditorEnabled: true
+    # auditorLedgerHost: <ledger hostname>
 
   prometheusRule:
     enabled: true
@@ -119,7 +119,7 @@ ledger:
                 - key: app.kubernetes.io/app
                   operator: In
                   values:
-                    - ledger
+                    - auditor
             topologyKey: kubernetes.io/hostname
           weight: 50
 
